--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Inlämning: Begrepp och Github, 8 Yhp</title>
 </head>
 <body>
+    <h1>Inlämning: Begrepp och Github, 8 Yhp</h1>
     <h3>Github flow</h3>
     <p>Vad är det? Hur använder man det? Vilka viktiga delar är inkluderade i begreppet?</p>
     <p> Github flow är något som man använder för att skapa branches för att sedan kunna arbeta smidigt med andra.</p>
